src/components/annotate/css/style.css
@property --oe-annotation-color {
  syntax: "<color>";
  inherits: false;
  initial-value: green;
}

@property --oe-annotation-font-color {
  syntax: "<color>";
  inherits: false;
  initial-value: white;
}

@property --oe-annotation-focus-color {
  syntax: "<color>";
  inherits: false;
  initial-value: lightgreen;
}

@property --oe-annotation-weight {
  syntax: "<length>";
  inherits: false;
  initial-value: 2px;
}

:host {
  position: relative;
  display: inline-block;
  width: 100%;

  --oe-annotation-color: green;
  --oe-annotation-font-color: white;
  --oe-annotation-focus-color: lightgreen;
  --oe-annotation-weight: 2px;
}

#wrapper-element {
  position: relative;
}

.wrapper-chrome {
  position: relative;
}

.annotation-chrome {
  position: absolute;
  z-index: 1;

  overflow: hidden;
}

.headings-chrome {
  position: relative;
}

.annotation-container {
  position: relative;
  cursor: pointer;

  &:focus {
    --oe-annotation-color: var(--oe-annotation-focus-color);
    z-index: 1;
  }

  & > .bounding-box {
    position: absolute;
    border: var(--oe-annotation-weight) solid var(--oe-annotation-color);
  }
}

.bounding-box-heading {
  width: fit-content;
  margin: 0;
  font-size: var(--oe-font-size);

  position-visibility: no-overflow;

  &.style-edge {
    position: absolute;

    color: var(--oe-annotation-font-color);
    background-color: var(--oe-annotation-color);

    /*
      When the annotation headings are positioned at the top of the spectrogram
      (tag-style="spectrogram-top"), if the label is too large to fit inside the
      annotations width, it can cause the heading to overflow and not be visible.

      This is especially predominant when the user slots in their own content.
    */
    left: min(max(anchor(left), 0px), calc(100% - 5em));
    bottom: max(anchor(top), 1em);
    position-try: flip-block, flip-inline, --position-float-top;
  }

  &.style-spectrogram-top {
    position: absolute;
    bottom: 0px;

    rotate: -20deg;
    transform-origin: 0 0;

    /*
      We use a ::before pseudo element to draw a line going from the annotation
      heading to the annotation bounding box.
      This makes it easier to see what annotation a heading is associated with.
    */
    /* &::before {
      position: absolute;
      height: 100%;

      border: var(--oe-annotation-weight) solid var(--oe-annotation-color);

      content: "";
    } */
  }

  &.style-hidden {
    display: none;
  }
}

@position-try --position-float-top {
  top: 0px;
}

